Correcting the alignment of button

--- a/themes/efora-child/style.css
+++ b/themes/efora-child/style.css
@@ -5439,3 +5439,7 @@ border-radius: 10px;
     outline:none;
 }
 
+.viewallhomepage{
+    font-size:12px;
+}
+
